# logic-pro-discord-rpc

./: Cargo.toml
.github/workflows/: release.yml  rust.yml
src/: app_delegate.rs  discord.rs  logic.rs  main.rs  state.rs  utils.rs
