[package]
name = "logic-pro-discord-rpc"
version = "0.1.0"
edition = "2024"

[features]
unstable-darwin-objc = [
    "objc2/unstable-darwin-objc",
    "objc2-app-kit/unstable-darwin-objc",
    "objc2-foundation/unstable-darwin-objc",
]

[dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2" }
objc2-app-kit = { version = "0.3.2" }
discord-rich-presence = "1.0.0"
libc = "0.2.178"

[patch.crates-io]
objc2 = { git = "https://github.com/madsmtm/objc2.git" }
objc2-foundation = { git = "https://github.com/madsmtm/objc2.git" }
objc2-app-kit = { git = "https://github.com/madsmtm/objc2.git" }
